@@ -1,13 +1,13 @@
 Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and observed hydrological time series
-Version: 0.2-2
-Date: 2011-04-14
+Version: 0.2-2-1
+Date: 2011-04-15
 Author: Mauricio Zambrano Bigiarini
 Maintainer: Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions implementing both statistical and graphical goodnes-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can removed before the computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>=2)
-Depends: R (>= 2.10.0), hydroTSM
-Suggests: zoo
-URL: http://cran.r-project.org/web/packages/hydroGOF/, http://www.rforge.net/hydroGOF/
+Depends: R (>= 2.10.0), hydroTSM (>= 0.2-2)
+Suggests: zoo (>= 1.7-0), xts (>= 0.8-1)
+URL: http://cran.r-project.org/web/packages/hydroGOF/, http://www.rforge.net/hydroGOF/, https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroGOF
 LazyLoad: yes
