@@ -2,17 +2,23 @@ NEWS/ChangeLog for hydroGOF
 --------------------------
 
 0.2-3	(under development)
+	o now it depends on 'hydroTSM' >= 0.2-3, in order to use the re-written 'drawxaxis' function.
 	o new function: 'wrmse', weighted root mean squared error
 	o new function: 'wbias', weighted bias
 	o new function: 'wabias', weighted absolute bias
 	o new function: 'wNSeff', weighted Nash-Sutcliffe efficiency
 	o new function: 'wKGE', weighted Kling-Gupta efficiency
+	o 'plot2': -) better display of time series objects, when 'plot.type' is 'single'.
+		      The (nicer) 'plot.xts' function is used instead of the previous 'plot.zoo'.
+		   -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "weeks", "hours", "minutes", 
+		      "seconds", which should work with sub-daily time series
+	o 'ggof': better display of time series objects (by using the new 'plot2')
 
 0.2-2	14-Apr-2011
 	o new function: 'KGE', Kling-Gupta efficiency
 	o 'ggof': argument 'lab.fmt' is used now, and 'KGE' is showed in the GoF legend
 	o 'plot2': KGE is showed in the GoF legend
-	o SVN started to be used for package develpement in Rforge (thanks to Simon Urbanek for his great support)        
+	o SVN started to be used for package development in Rforge (thanks to Simon Urbanek for his great support)        
 	o Updated dependence on R >= 2.10.0
 
 
